--- a/src/app/shared/elements/radio-group/radio-group.component.html
+++ b/src/app/shared/elements/radio-group/radio-group.component.html
@@ -3,8 +3,10 @@
     aria-labelledby="radio-group-label"
     class="radio-group"
     [(ngModel)]="chose" (change)="selected()">
-    <mat-radio-button class="radio-button" *ngFor="let option of options" [value]="option.key" [disabled]="option.isDisabled">
-      {{option.value}}
-    </mat-radio-button>
+    @for (option of options; track option) {
+      <mat-radio-button class="radio-button" [value]="option.key" [disabled]="option.isDisabled">
+        {{option.value}}
+      </mat-radio-button>
+    }
   </mat-radio-group>
 </div>
