--- a/src/app/features/invoke-wallet/components/invoker/invoker.component.html
+++ b/src/app/features/invoke-wallet/components/invoker/invoker.component.html
@@ -1,11 +1,15 @@
 <div>
 
-  <div *ngIf="!hasResult" [ngClass]="{'green-bg': false}">
-    <vc-qr-code (transactionConcludedEvent)="handleTransactionConcludedEvent($event)"></vc-qr-code>
-  </div>
+  @if (!hasResult) {
+    <div [ngClass]="{'green-bg': false}">
+      <vc-qr-code (transactionConcludedEvent)="handleTransactionConcludedEvent($event)"></vc-qr-code>
+    </div>
+  }
 
-  <div *ngIf="hasResult" [ngClass]="{'green-bg': true}">
-    <vc-presentations-results [concludedTransaction]="response"></vc-presentations-results>
-  </div>
+  @if (hasResult) {
+    <div [ngClass]="{'green-bg': true}">
+      <vc-presentations-results [concludedTransaction]="response"></vc-presentations-results>
+    </div>
+  }
 
 </div>
