--- a/src/app/features/invoke-wallet/components/qr-code/qr-code.component.html
+++ b/src/app/features/invoke-wallet/components/qr-code/qr-code.component.html
@@ -2,47 +2,57 @@
   <div>
     <mat-card class="example-card">
       <mat-card-content>
-        <p *ngIf="isCrossDevice" style="text-align: center">
-          <qrcode
-            [qrdata]="deepLinkTxt"
-            [allowEmptyString]="false"
-            [ariaLabel]="'QR Code image with the following content...'"
-            [cssClass]="'center'"
-            [elementType]="'canvas'"
-            [errorCorrectionLevel]="'L'"
-            [margin]="2"
-            [title]="deepLinkTxt"
-            [width]="300"
-            (qrCodeURL)="onChangeURL($event)"
-          />
-        </p>
+        @if (isCrossDevice) {
+          <p style="text-align: center">
+            <qrcode
+              [qrdata]="deepLinkTxt"
+              [allowEmptyString]="false"
+              [ariaLabel]="'QR Code image with the following content...'"
+              [cssClass]="'center'"
+              [elementType]="'canvas'"
+              [errorCorrectionLevel]="'L'"
+              [margin]="2"
+              [title]="deepLinkTxt"
+              [width]="300"
+              (qrCodeURL)="onChangeURL($event)"
+              />
+            </p>
+          }
 
-        <mat-divider *ngIf="isCrossDevice" />
-        <div class="below-qr-code">
-          <span *ngIf="isCrossDevice"
-            >Scan the
-            <a
-              [href]="qrCodeDownloadLink"
-              download="qrcode"
-              title="download as image"
-              >QR code</a
-            >
-            above with your phone
-          </span>
-          <p *ngIf="isCrossDevice">- OR -</p>
-          <a mat-raised-button class="authorize" [href]="deepLinkTxt"
-            >OPEN WITH YOUR WALLET</a
-          >
+          @if (isCrossDevice) {
+            <mat-divider />
+          }
+          <div class="below-qr-code">
+            @if (isCrossDevice) {
+              <span
+                >Scan the
+                <a
+                  [href]="qrCodeDownloadLink"
+                  download="qrcode"
+                  title="download as image"
+                  >QR code</a
+                  >
+                  above with your phone
+                </span>
+              }
+              @if (isCrossDevice) {
+                <p>- OR -</p>
+              }
+              <a mat-raised-button class="authorize" [href]="deepLinkTxt"
+                >OPEN WITH YOUR WALLET</a
+                >
+              </div>
+
+              <mat-divider />
+            </mat-card-content>
+            <mat-card-actions>
+              <button mat-button (click)="openLogs()">View transaction logs</button>
+            </mat-card-actions>
+            <mat-card-footer>
+              @if (isCrossDevice) {
+                <mat-progress-bar mode="indeterminate" />
+              }
+            </mat-card-footer>
+          </mat-card>
         </div>
-
-        <mat-divider />
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button (click)="openLogs()">View transaction logs</button>
-      </mat-card-actions>
-      <mat-card-footer>
-        <mat-progress-bar *ngIf="isCrossDevice" mode="indeterminate" />
-      </mat-card-footer>
-    </mat-card>
-  </div>
-</div>
+      </div>
