--- a/src/app/features/presentation-request-preparation/home/home.component.html
+++ b/src/app/features/presentation-request-preparation/home/home.component.html
@@ -11,20 +11,22 @@
             <ng-template matStepLabel>... select attestation(s)</ng-template>
             <vc-supported-attestations (selectionChangedEvent)="handleSelectionChangedEvent($event)"></vc-supported-attestations>
           </div>
-          
+
           <div class="button-container">
             <button mat-raised-button matStepperNext [disabled]="!attestationsSelected()">Next</button>
           </div>
-        
+
         </mat-step>
 
         <mat-step>
           <div>
             <ng-template matStepLabel>...select attestation(s) attributes</ng-template>
-            <vc-attribute-selection *ngIf="selectedAttestations !== null"
-                                    [attestationsSelection]="selectedAttestations"
-                                    (attributesCollectedEvent)="handleAttributesCollectedEvent($event)"
-            ></vc-attribute-selection>
+            @if (selectedAttestations !== null) {
+              <vc-attribute-selection
+                [attestationsSelection]="selectedAttestations"
+                (attributesCollectedEvent)="handleAttributesCollectedEvent($event)"
+              ></vc-attribute-selection>
+            }
           </div>
           <div class="button-container">
             <button mat-raised-button matStepperPrevious>Back</button>
@@ -35,13 +37,13 @@
         <mat-step>
           <div style="padding-top: 10px">
             <ng-template matStepLabel>...select request options and submit</ng-template>
-                        
+
             <div class="config-option-container">
               <div class="config-option-label">
                 Request URI Method
               </div>
-              <mat-button-toggle-group [formControl]="requestUriMethodControl" 
-                (valueChange)="handleRequestUriMethodChangedEvent($event)"  
+              <mat-button-toggle-group [formControl]="requestUriMethodControl"
+                (valueChange)="handleRequestUriMethodChangedEvent($event)"
                 aria-label="Request URI Method" >
                 <mat-button-toggle value="get">Get</mat-button-toggle>
                 <mat-button-toggle value="post">Post</mat-button-toggle>
@@ -54,14 +56,19 @@
                 <mat-panel-title><span>Your presentation request so far...</span></mat-panel-title>
               </mat-expansion-panel-header>
 
-              <button mat-button matTooltip="Copy content"  style="float: right"
-                      *ngIf="canProceed()"
-                      [cdkCopyToClipboard]="initializationRequest | json">
-                <mat-icon>content_copy</mat-icon>
-              </button>
-              <span id="as-pre" *ngIf="canProceed()">{{ initializationRequest | json }}</span>
+              @if (canProceed()) {
+                <button mat-button matTooltip="Copy content"  style="float: right"
+                  [cdkCopyToClipboard]="initializationRequest | json">
+                  <mat-icon>content_copy</mat-icon>
+                </button>
+              }
+              @if (canProceed()) {
+                <span id="as-pre">{{ initializationRequest | json }}</span>
+              }
 
-              <pre *ngIf="!canProceed()">..nothing prepared yet...</pre>
+              @if (!canProceed()) {
+                <pre>..nothing prepared yet...</pre>
+              }
             </mat-expansion-panel>
           </div>
           <div class="button-container">
