--- a/src/app/shared/elements/body-actions/body-actions.component.html
+++ b/src/app/shared/elements/body-actions/body-actions.component.html
@@ -1,5 +1,5 @@
 <div class="button-container">
-  <ng-container *ngFor="let action of actions | orderBy: 'desc'">
+  @for (action of actions | orderBy: 'desc'; track action) {
     <vc-button class="vc-button" [name]="action.label" [id]="action.id" [mode]="action.mode" [isDisabled]="action.disabled" [color]="action.color" (clicked)="runClick(action)"></vc-button>
-  </ng-container>
+  }
 </div>
