--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -2,7 +2,7 @@
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
-@use '/src/template' as temp;
+@use 'template' as temp;
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
