--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @use "template" as temp;
-@use "/src/layout-breakpoint" as points;
+@use "layout-breakpoint" as points;
 @use "sass:map";
 
 html {
