Add authorization request URI handling and update presentation options component

--- a/src/app/features/presentation-request-preparation/components/presentation-options/presentation-options.component.html
+++ b/src/app/features/presentation-request-preparation/components/presentation-options/presentation-options.component.html
@@ -59,6 +59,7 @@
             placeholder="scheme://"
             [formControl]="authorizationSchemeControl"
             autocomplete="off"
+            (input)="authorizationSchemeChange.emit(authorizationSchemeControl.value)"
           />
         </mat-form-field>
       </div>
