--- a/src/app/features/presentation-request-preparation/home/home.component.html
+++ b/src/app/features/presentation-request-preparation/home/home.component.html
@@ -42,6 +42,7 @@
               [authorizationSchemeControl]="authorizationSchemeControl"
               (profileChange)="handleProfileChangedEvent($event)"
               (requestUriMethodChange)="handleRequestUriMethodChangedEvent($event)"
+              (authorizationSchemeChange)="handleAuthorizationSchemeChangedEvent($event)"
             ></vc-presentation-options>
 
             <mat-expansion-panel>
