Refactor presentation options component layout and styles for improved clarity and usability

--- a/src/app/features/presentation-request-preparation/components/attribute-selection/attribute-selection.component.html
+++ b/src/app/features/presentation-request-preparation/components/attribute-selection/attribute-selection.component.html
@@ -1,6 +1,6 @@
 <div class="component-root">
   <ng-container *ngFor="let selection of attestationsSelection">
-    <mat-card appearance="outlined">
+    <mat-card >
       <mat-card-header>
         <mat-card-title>{{ nameOf(selection.type) }}</mat-card-title>
         <mat-card-subtitle>
