--- a/src/app/features/presentation-request-preparation/home/home.component.scss
+++ b/src/app/features/presentation-request-preparation/home/home.component.scss
@@ -15,12 +15,8 @@
     }
   }
 
-  .config-option-container {
+  .presentation-options-container {
     margin-bottom: 16px;
-
-    .config-option-label {
-      margin-bottom: 8px;
-    }
   }
 
   span#as-pre {
