--- a/src/app/features/presentation-request-preparation/components/presentation-options/presentation-options.component.html
+++ b/src/app/features/presentation-request-preparation/components/presentation-options/presentation-options.component.html
@@ -48,14 +48,14 @@
 
       <div class="request-options-row">
         <div class="request-options-label">
-          <span>Authorization URI Scheme</span>
+          <span>Authorization Endpoint</span>
           <p class="request-options-helper">
-            Specify a custom URI for the authorization request
+            Specify a endpoint URI for the authorization request
           </p>
         </div>
         <div class="request-options-control">
           <mat-form-field appearance="outline" class="config-option-field">
-            <mat-label>Authorization URI Scheme</mat-label>
+            <mat-label>Authorization Endpoint</mat-label>
             <input
               matInput
               placeholder="scheme://"
