--- a/src/app/features/presentation-request-preparation/components/presentation-options/presentation-options.component.html
+++ b/src/app/features/presentation-request-preparation/components/presentation-options/presentation-options.component.html
@@ -50,7 +50,7 @@
         <div class="request-options-label">
           <span>Authorization Endpoint</span>
           <p class="request-options-helper">
-            Specify a endpoint URI for the authorization request
+            Specify an endpoint URI for the authorization request
           </p>
         </div>
         <div class="request-options-control">
